Permite NEW LINE na textbox OBS

--- a/GDSB.UI2/WindowCreateSecretBox.xaml
+++ b/GDSB.UI2/WindowCreateSecretBox.xaml
@@ -19,7 +19,7 @@
         <Label Content="Usuario" HorizontalAlignment="Left" Margin="13,91,0,0" VerticalAlignment="Top" Width="294" Background="Black" Foreground="White"/>
         <TextBox x:Name="textBoxSenha" HorizontalAlignment="Left" Height="23" Margin="11,175,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390"/>
         <Label Content="Senha" HorizontalAlignment="Left" Margin="11,149,0,0" VerticalAlignment="Top" Width="296" Background="Black" Foreground="White"/>
-        <TextBox x:Name="textBoxOBS" HorizontalAlignment="Left" Height="81" Margin="11,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390"/>
+        <TextBox x:Name="textBoxOBS" HorizontalAlignment="Left" AcceptsReturn="True" Height="81" Margin="11,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="390" Background="White"/>
         <Label Content="Obs" HorizontalAlignment="Left" Margin="11,203,0,0" VerticalAlignment="Top" Width="296" Background="Black" Foreground="White"/>
         <CheckBox x:Name="checkBoxCaracEspeciais" IsChecked="True" Content="CARAC. ESPECIAIS" HorizontalAlignment="Left" Margin="242,397,0,0" VerticalAlignment="Top" Foreground="White" Width="145" Height="18"/>
         <CheckBox x:Name="checkBoxNumeros" IsChecked="True" Content="NUMEROS" HorizontalAlignment="Left" Margin="242,423,0,0" VerticalAlignment="Top" Foreground="White" Width="145" Height="18"/>
