--- a/GDSB.UI2/CustomComponents/UserSecretBox.xaml
+++ b/GDSB.UI2/CustomComponents/UserSecretBox.xaml
@@ -73,6 +73,16 @@
             </Label.Background>
         </Label>
         <TextBox x:Name="textObs" HorizontalAlignment="Left" Height="79" Margin="78,101,0,0" TextWrapping="Wrap" Text="User" VerticalAlignment="Top" Width="209" IsReadOnly="True"/>
+        <Image x:Name="star" Cursor="Hand" HorizontalAlignment="Left" Height="15" Margin="4,4,0,0" VerticalAlignment="Top" Width="15" RenderTransformOrigin="0.5,0.5" Source="/GDSB.UI;component/Resources/star cinza.png" >
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-9.791"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
 
     </Grid>
 </UserControl>
