Mudanca nos icones e add efeito de like ao favoritar caixa de senha

--- a/GDSB.UI2/CustomComponents/UserSecretBox.xaml
+++ b/GDSB.UI2/CustomComponents/UserSecretBox.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GDSB.UI.CustomComponents"
+             xmlns:gif="http://wpfanimatedgif.codeplex.com"
              mc:Ignorable="d" 
              d:DesignHeight="190" d:DesignWidth="325" UseLayoutRounding="True" BorderThickness="0" RenderTransformOrigin="0,0" Margin="5,5,5,7">
     <Grid>
@@ -73,16 +74,10 @@
             </Label.Background>
         </Label>
         <TextBox x:Name="textObs" HorizontalAlignment="Left" Height="79" Margin="78,101,0,0" TextWrapping="Wrap" Text="User" VerticalAlignment="Top" Width="209" IsReadOnly="True"/>
-        <Image x:Name="star" Cursor="Hand" HorizontalAlignment="Left" Height="15" Margin="4,4,0,0" VerticalAlignment="Top" Width="15" RenderTransformOrigin="0.5,0.5" Source="/GDSB.UI;component/Resources/star cinza.png" >
-            <Image.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-9.791"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Image.RenderTransform>
+        <Image x:Name="star" Cursor="Hand" HorizontalAlignment="Left" Height="21" Margin="4,4,0,0" VerticalAlignment="Top" Width="21" Source="/GDSB.UI;component/Resources/Heart Colorless.png" ToolTip="Favoritar &lt;3" >
+
         </Image>
+        <Image x:Name="ImgLikeEffect" Visibility="Visible" gif:ImageBehavior.AnimationSpeedRatio="2" HorizontalAlignment="Left" Height="101" Margin="10,10,0,0" VerticalAlignment="Top" Width="68"/>
 
     </Grid>
 </UserControl>
