--- a/GDSB.UI2/MainWindow.xaml
+++ b/GDSB.UI2/MainWindow.xaml
@@ -21,7 +21,21 @@
             <WrapPanel Orientation="Horizontal" Width="Auto" Margin="0,22,0,72" HorizontalAlignment="Center" Name="Panel" VerticalAlignment="Center">
             </WrapPanel>
         </ScrollViewer>
-        
+        <Label MouseEnter="BtnRecoveryFiles_MouseEnter" MouseLeave="BtnRecoveryFiles_MouseLeave" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" x:Name="BtnRecoveryFiles" Content="" HorizontalAlignment="Right" VerticalAlignment="Top" Width="36" MouseLeftButtonDown="BtnRecoveryFiles_MouseLeftButtonDown"  Height="34" BorderThickness="2" Padding="0" TextOptions.TextHintingMode="Animated" FontSize="14" Cursor="Hand" RenderTransformOrigin="0.5,0.5" ToolTip="Recovery Profile">
+            <Label.Background>
+                <ImageBrush ImageSource="Resources/recovery folder-100s-224px.png">
+                    <ImageBrush.RelativeTransform>
+                        <TransformGroup>
+                            <ScaleTransform x:Name="ScaleRecoveryFiles" CenterY="0.5" CenterX="0.5" ScaleX="0.85" ScaleY="0.85"/>
+                            <SkewTransform CenterY="0.5" CenterX="0.5"/>
+                            <RotateTransform CenterY="0.5" CenterX="0.5"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </ImageBrush.RelativeTransform>
+                </ImageBrush>
+            </Label.Background>
+        </Label>
+
         <Button Content="Criar Perfil" HorizontalAlignment="Center" Margin="0,0,0,20" VerticalAlignment="Bottom" Width="180" Height="29" Click="Button_Click" />
         <Button x:Name="btnImport" Click="btnImport_Click" Content="Importar perfil antigo" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="123" />
         
